fix: design break on mobile size

--- a/docs/src/assets/scss/docs-header.scss
+++ b/docs/src/assets/scss/docs-header.scss
@@ -13,10 +13,12 @@
         padding-block-start: 0;
         padding-block-end: 0;
         max-width: 1700px;
-        margin: auto;
 
         @media all and (min-width: 1024px) {
             justify-content: space-between;
+        }
+        @media all and (min-width: 1700px) {
+            margin: auto;
         }
     }
 }
